tests/semantic/invalid/unknown-struct-field.inox
Module SemanticInvalidUnknownField

Type
    TPoint Struct
        FX Integer
    ;

Main() :
    Var
        P TPoint
    ;

    P.FY := 10
;
